Improve app.js file

--- a/docs/wearables/sdks/react_native.mdx
+++ b/docs/wearables/sdks/react_native.mdx
@@ -112,7 +112,7 @@ VitalHealth.cleanUp();
 ```
 
 
-A full example of the app.tsx file can be seen below:
+A full example of the app.js file can be seen below:
 
 ```js
 import React, { useEffect } from 'react';
