--- a/docs/wearables/sdks/react_native.mdx
+++ b/docs/wearables/sdks/react_native.mdx
@@ -5,10 +5,10 @@ title: "React Native"
 ## 1. Introduction
 
 Our React Native library mirrors the functionality of our iOS and Android SDKs. It is a wrapper around the native SDKs, and it exposes the same methods and events.
-It is split into three parts: Core, HealthKit and BLE Devices. They can be used interchangeably, but you need to install them separately.
+It is split into three parts: Core, Health and BLE Devices. They can be used interchangeably, but you need to install them separately.
 An example app can be found (here)[https://github.com/tryVital/vital-react-native/tree/main/example].
 
-You can install the Core and HealthKit SDK by using npm (BLE Devices coming soon):
+You can install the Core and Health SDK by using npm (BLE Devices coming soon):
 
 ## 1. Install your dependencies
 
