Update react native implementation

--- a/docs/wearables/sdks/react_native.mdx
+++ b/docs/wearables/sdks/react_native.mdx
@@ -74,7 +74,6 @@ VitalHealth.configure(automaticConfiguration, numberOfDaysToPull, logsEnabled)
   .catch((error) => {
     // Something went wrong
   });
-
 ```
 
 If you set `automaticConfiguration` to true, the SDK will do everything on your behalf.
@@ -111,74 +110,43 @@ import { VitalHealth } from "vital-health-react-native";
 VitalHealth.cleanUp();
 ```
 
-
 A full example of the app.js file can be seen below:
 
 ```js
-import React, { useEffect } from 'react';
-import {
-  SafeAreaView,
-  ScrollView,
-  StatusBar,
-  Text,
-  useColorScheme,
-  View,
-} from 'react-native';
-import {
-  Colors,
-  Header
-} from 'react-native/Libraries/NewAppScreen';
+import React, { useEffect } from "react";
+import { SafeAreaView, Text } from "react-native";
 import { VitalCore } from "vital-core-react-native";
 import { VitalHealth, VitalResource } from "vital-health-react-native";
 
-
-const VITAL_API_KEY = "<API_KEY>"
-const VITAL_ENVIRONMENT = "<sandbox | production>"
-const VITAL_REGION = "<us | eu>"
+const VITAL_API_KEY = "<API_KEY>";
+const VITAL_ENVIRONMENT = "<sandbox | production>";
+const VITAL_REGION = "<us | eu>";
 
 const App = () => {
-  const backgroundStyle = {
-    backgroundColor: isDarkMode ? Colors.darker : Colors.lighter,
-  };
-
-  const isDarkMode = useColorScheme() === 'dark';
-    useEffect(()=>{
-      VitalCore.configure(
-        VITAL_API_KEY,
-        VITAL_ENVIRONMENT,
-        VITAL_REGION,
-        true
-      ).then(()=>{
-        VitalHealth.configure(true, 90, false).then(()=>{
-          VitalCore.setUserId("2c5879eb-7d99-468b-bb43-3fe0d71e93ba").then(()=> {
-            VitalHealth.askForResources([VitalResource.Steps, VitalResource.Activity]);
-          })
-        })
-      })
-
-    },[])
+  useEffect(() => {
+    VitalCore.configure(
+      VITAL_API_KEY,
+      VITAL_ENVIRONMENT,
+      VITAL_REGION,
+      true
+    ).then(() => {
+      VitalHealth.configure(true, 90, false).then(() => {
+        VitalCore.setUserId("2c5879eb-7d99-468b-bb43-3fe0d71e93ba").then(() => {
+          VitalHealth.askForResources([
+            VitalResource.Steps,
+            VitalResource.Activity,
+          ]);
+        });
+      });
+    });
+  }, []);
 
   return (
-    <SafeAreaView style={backgroundStyle}>
-      <StatusBar
-        barStyle={isDarkMode ? 'light-content' : 'dark-content'}
-        backgroundColor={backgroundStyle.backgroundColor}
-      />
-      <ScrollView
-        contentInsetAdjustmentBehavior="automatic"
-        style={backgroundStyle}>
-        <Header />
-        <View
-          style={{
-            backgroundColor: isDarkMode ? Colors.black : Colors.white,
-          }}>
-         <Text>Hello World!</Text>
-        </View>
-      </ScrollView>
+    <SafeAreaView>
+      <Text>Hello Vital React Native Implementiation</Text>
     </SafeAreaView>
   );
 };
 
 export default App;
-
 ```
