home screen work

--- a/docs/api-details/authentication.mdx
+++ b/docs/api-details/authentication.mdx
@@ -42,6 +42,6 @@ curl --request POST
 }
 ```
 
-We have both [NodeJs and Python](../welcome/libraries) Clients which handle authentication
+We have both [NodeJs and Python](../home/libraries) Clients which handle authentication
 and refresh tokens. In the case you want to request these yourself you can make the request
 as outlined below.
