--- a/docs/wearables/vital-link/link_flow.mdx
+++ b/docs/wearables/vital-link/link_flow.mdx
@@ -5,16 +5,17 @@ title: "Link Flow"
 The link flow starts when a user wants to connect a wearable device with Vital. An overview of the process can be found below.
 To start integrating Vital Link make sure you have your `api_key` from your team [dashboard](https://app.tryvital.io).
 
-Before initialising the link flow, ensure you have generated a `user_id` for the specific user. This should be done when a user signs up to your service and is to be stored alongside your user entry in your database. [See](/welcome/quickstart#3-creating-your-first-user) for more details on how to create a `user_id`.
+Before initialising the link flow, ensure you have generated a `user_id` for the specific user. This should be done when a user signs up to your service and is to be stored alongside your user entry in your database. [See](/home/quickstart#3-creating-your-first-user) for more details on how to create a `user_id`.
 
 <div className="flex flex-row">
 
 1. To launch Vital link, first generate a link_token by passing the `user_id` to the `/link/token` endpoint.
 2. Pass the link_token into the Vital link component to open the link for the user. Please note: the `link_token` is a short-lived one-time use token.
 3. Use the onSuccess, onError, onExit callbacks to handle different events on your frontend.
-  
+
 <img
-  src="https://storage.googleapis.com/vital-assets/link-flow-explainer.png" width="50%"
+  src="https://storage.googleapis.com/vital-assets/link-flow-explainer.png"
+  width="50%"
 />
 
 </div>
