--- a/docs/api-reference/lab-testing/get-order.mdx
+++ b/docs/api-reference/lab-testing/get-order.mdx
@@ -9,7 +9,7 @@ from vital import Client
 
 client = Client(api_key, "sandbox")
 
-data = client.Order.get("<order_id>")
+data = client.LabTests.get_order("<order_id>")
 
 ```
 
