--- a/docs/api-reference/lab-testing/create-order.mdx
+++ b/docs/api-reference/lab-testing/create-order.mdx
@@ -1,5 +1,5 @@
 ---
-openapi: "POST /v3/order/{order_id}/cancel"
+openapi: "POST /v3/order"
 ---
 
 <RequestExample>
@@ -9,7 +9,29 @@ from vital import Client
 
 client = Client(api_key, "sandbox")
 
-data = client.Order.cancel("<order_id>")
+data = client.LabTests.create_order(
+    user_id=*,
+    lab_test_id="5b41f610-ebc5-4803-8f0c-a61c3bdc7faf",
+    patient_details={
+        "dob": "2020-01-01",
+        "gender": "female"
+    },
+    patient_address={
+            "receiver_name": "john Doe",
+            "street": "606 Capp st.",
+            "street_number": "Apt 14",
+            "city": "San Francisco",
+            "state": "CA",
+            "zip": "94107",
+            "country": "US",
+            "phone_number": "+181808433"
+            },
+    }
+    physician={
+        "name": "Dr. John Doe",
+        "phone_number": "+181808433"
+    },
+)
 
 ```
 
