--- a/docs/home/welcome.mdx
+++ b/docs/home/welcome.mdx
@@ -35,7 +35,7 @@ description: "Here you'll find guides, resources, and references to build using 
     title="Labs and Test Kits"
     icon="flask"
     color="#BF40BF"
-    href="/home/introduction"
+    href="/lab/home/introduction"
   >
     Vital’s lab test API allows digital health companies to carry out at-home
     lab testing. Companies can use the API to order a variety of tests, using
@@ -46,12 +46,16 @@ description: "Here you'll find guides, resources, and references to build using 
 ## Popular Topics
 
 <CardGroup cols={1}>
-  <Card title="Apple HealthKit" icon="apple" href="/home/quickstart">
+  <Card title="Apple HealthKit" icon="apple" href="/wearables/sdks/ios">
     Apple HealthKit is one of the biggest providers of fitness and health data.
     Here you can learn how to integrate it with via our SDKs. We currently
     support iOS, Flutter and React Native.
   </Card>
-  <Card title="Vital Link" icon="link" href="/wearables/providers/introduction">
+  <Card
+    title="Vital Link"
+    icon="link"
+    href="/wearables/vital-link/introduction"
+  >
     Vital Link is what allows your users to connect their wearable devices to
     Vital. It's a simple widget that you can add to your app. Learn how to
     integrate it here.
@@ -59,7 +63,7 @@ description: "Here you'll find guides, resources, and references to build using 
   <Card
     title="Fields per Resource per Provider"
     icon="files"
-    href="/home/environments"
+    href="/wearables/providers/resources"
   >
     A provider like Garmin can have multiple resources (e.g. Workouts, Sleep).
     Each resource, might not have all the fields. Learn which fields are
