--- a/docs/home/environments.mdx
+++ b/docs/home/environments.mdx
@@ -16,15 +16,19 @@ When you sign up to Vital you get access to two environments, Sandbox and Produc
 
 <div className="flex flex-row justify-between">
   <div>
-    <div>Sandbox</div>
+    <div>
+      <h3>Sandbox</h3>
+    </div>
     <li>For app integration</li>
     <li>For formal integration testing</li>
-    <li>Up to 20 live devices</li>
+    <li>Up to 50 live devices</li>
     <li>Stateful, data is persisted</li>
     <li>Requires authentication</li>
   </div>
   <div>
-    <div>Production</div>
+    <div>
+      <h3>Production</h3>
+    </div>
     <li>Uses production data</li>
     <li>Should not be used for testing</li>
     <li>Unlimited devices</li>
