--- a/docs/wearables/sdks/android.mdx
+++ b/docs/wearables/sdks/android.mdx
@@ -20,7 +20,14 @@ things, it has the network layer that allows us to send data from a device to a 
 
 ## 2. Installation
 
-You can install the Vital SDK by adding the following to your `build.gradle` file:
+You can install the Vital SDK by adding the followings to your `build.gradle` file:
+
+```groovy
+repositories {
+  ...
+  maven { url 'https://jitpack.io' }
+}
+```
 
 ```groovy
 implementation 'com.github.tryVital.vital-android:VitalClient:$vital_version'
