--- a/docs/wearables/sdks/flutter.mdx
+++ b/docs/wearables/sdks/flutter.mdx
@@ -30,7 +30,6 @@ final client = VitalClient()
 Query users:
 
 ```dart
-
 final Response<List<User>> usersResponse = client.userService.getAll();
 ```
 
@@ -54,14 +53,24 @@ client.linkProvider(user, 'strava','vitalexample: //callback');
 
 Please read the [iOS SDK instructions on Apple HealthKit](/wearables/sdks/ios#VitalHealthKit). You need to edit your Capababilities and the `Info.plist` file.
 
-To use Apple HealthKit client you need to call configure first:
+First create your client:
 
 ```dart
-await client.healthkitServices.configureClient();
-await client.healthkitServices.configureHealthkit(backgroundDeliveryEnabled: true);
+final HealthkitServices healthkitServices = HealthkitServices(
+  apiKey: apiKey,
+  region: region,
+  environment: Environment.sandbox,
+)
 ```
 
-And setting the `userId`:
+Then initialise it:
+
+```dart
+await healthkitServices.configureClient();
+await healthkitServices.configureHealthkit(backgroundDeliveryEnabled: true);
+```
+
+And set the `userId`:
 
 ```dart
 await client.healthkitServices.setUserId('eba7c0a2-dc01-49f5-a361-...);
@@ -74,7 +83,7 @@ You need to ask for permissions before getting data. For example the following a
 ```dart
 final List<HealthkitResource> readResources = [HealthkitResource.water];
 final List<HealthkitResourceWrite> writeResources = [
-    HealthkitResourceWrite.water
+    HealthkitResourceWrite.water,
   ];
 
 client.healthkitServices.ask(readResources, writeResources);
@@ -89,13 +98,13 @@ client.healthkitServices.syncData();
 You can also write data:
 
 ```dart
-client.healthkitServices.writeHealthKitData(HealthkitResourceWrite.water, startDate, endDate, 1000)
+client.healthkitServices.writeHealthKitData(HealthkitResourceWrite.water, startDate, endDate, 1000);
 ```
 
-Finally observe the status stream, so you can react to changes:
+Finally, observe the status stream, so you can react to changes:
 
 ```dart
-Stream<SyncStatus> status = client.healthkitServices.status
+Stream<SyncStatus> status = client.healthkitServices.status;
 ```
 
 #### 4. Setup android
