add migration tips for flutter

--- a/docs/wearables/sdks/flutter.mdx
+++ b/docs/wearables/sdks/flutter.mdx
@@ -3,9 +3,9 @@ title: "Flutter"
 ---
 
 <Tip>
-  Please check our [sample
-  app](https://github.com/tryVital/vital-flutter/tree/main/example), that makes
-  full use of the SDK.
+    Please check our [sample
+    app](https://github.com/tryVital/vital-flutter/tree/main/example), that makes
+    full use of the SDK.
 </Tip>
 
 ## 1. Introduction
@@ -13,8 +13,8 @@ title: "Flutter"
 The Vital SDK is split into three main components: `vital_core`, `vital_health` and `vital_devices`.
 
 - [vital_core][1] holds common
-  components to both `vital_health` and `vital_devices`. Among other things, it has the network layer that allows us to
-  send data from a device to a server.
+components to both `vital_health` and `vital_devices`. Among other things, it has the network layer that allows us to
+send data from a device to a server.
 - [vital_health][2] is an abstraction over HealthKit an Health Connect(coming soon)
 - [vital_devices][3] is an abstraction over a set of Bluetooth devices.
 
@@ -40,11 +40,11 @@ client.linkProvider(user, 'strava','vitalexample: //callback');
 ```
 
 <Tip>
-  Note: To return back to the app after successful linking, setup an intent
-  filter in `AndroidManifest.xml` and custom URL scheme in `info.plist`. Note 2:
-  Refer to
-  [documentation](https://docs.tryvital.io/wearables/providers/Introduction) for
-  all supported data providers.
+    Note: To return back to the app after successful linking, setup an intent
+    filter in `AndroidManifest.xml` and custom URL scheme in `info.plist`. Note 2:
+    Refer to
+    [documentation](https://docs.tryvital.io/wearables/providers/Introduction) for
+    all supported data providers.
 </Tip>
 
 ## 3. Vital Health
@@ -131,7 +131,6 @@ You will have to request the bluetooth permission in your app before using the S
 Add the following to your `AndroidManifest.xml`:
 
 ```xml
-
 <uses-permission android:name="android.permission.BLUETOOTH_SCAN" android:usesPermissionFlags="neverForLocation"/>
 <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
 
@@ -174,6 +173,49 @@ Depending on the type of device you are connecting to, you will have to call dif
 
 After you have received samples depending on the type of device you might need to star scanning again to receive the
 next set of samples.
+
+# Migrate from 0.3.* and 0.4.* to 0.5.*
+
+Our original package **vital_flutter** is now separated into 3 packages: **vital_core**, **vital_health** and **vital_devices**.
+
+- **vital_core** contains the Vital Client
+- **vital_health** contains the Apple Health sync
+- **vital_devices** contains the sdk for bluetooth devices
+
+**vital_health**  and **vital_devices** are dependent **vital_core.**
+
+To migrate you will need to add the new plugins you need in your **pubspec.yaml** file:
+
+```yaml
+dependencies:
+  flutter:
+    sdk: flutter
+  vital_core: ^0.5.0-alpha.2
+  vital_health: ^0.5.0-alpha.4
+  vital_devices: ^0.5.0-alpha.2
+```
+
+All the imports have to be updated too. As an example:
+`import 'package:vital_flutter/services/data/user.dart';`
+
+needs to be changes
+`import 'package:vital_core/services/data/user.dart';`
+
+You can get all the classes by using:
+
+```dart
+import 'package:vital_core/vital_core.dart';
+import 'package:vital_devices/vital_devices.dart';
+import 'package:vital_health/vital_health.dart';
+```
+
+Your IDE should offer the correct import after you have updated your **pubspec.yaml**
+
+## Important  changes:
+
+- `DeviceManager` was moved out of the `VitalClient` to the **vital_devices** package
+- `HealthkitServices` is now in the **vital_health** package
+- `VitalClient` is now in **vital_core** package
 
 [1] https://pub.dev/packages/vital_core
 
