docs: update cholesterol request

--- a/docs/api-reference/vitals/cholesterol.mdx
+++ b/docs/api-reference/vitals/cholesterol.mdx
@@ -5,12 +5,11 @@ openapi: "GET /v2/timeseries/{user_id}/cholesterol/total"
 
 <RequestExample>
 
-```bash Shell
+```bash Bash
 curl --request GET \
-     --url https://api.tryvital.io/v2/timeseries/{user_id}/cholesterol/hdl?start_date="2022-05-01"&end_date="2022-06-01" \
+     --url {{BASE_URL}}/v2/timeseries/{user_id}/cholesterol/hdl?start_date="2022-05-01"&end_date="2022-06-01" \
      --header 'Accept: application/json'
      --header 'x-vital-api-key: <API_KEY>'
-
 ```
 
 ```python Python
