docs: improve flutter migration doc

--- a/docs/wearables/sdks/flutter.mdx
+++ b/docs/wearables/sdks/flutter.mdx
@@ -191,9 +191,9 @@ To migrate you will need to add the new plugins you need in your **pubspec.yaml*
 dependencies:
   flutter:
     sdk: flutter
-  vital_core: ^0.5.0-alpha.2
-  vital_health: ^0.5.0-alpha.4
-  vital_devices: ^0.5.0-alpha.2
+  vital_core: ^latest_version
+  vital_health: ^latest_version
+  vital_devices: ^latest_version
 ```
 
 All the imports have to be updated too. As an example:
